src/nesper/esp/spi.nim


proc spi_bus_remove_device*(handle: spi_device_handle_t): esp_err_t {.
    importc: "spi_bus_remove_device", header: "spi_master.h".}
## *
##  @brief Queue a SPI transaction for interrupt transaction execution. Get the result by ``spi_device_get_trans_result``.
##
##  @note Normally a device cannot start (queue) polling and interrupt
##       transactions simultaneously.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param trans_desc Description of transaction to execute
##  @param ticks_to_wait Ticks to wait until there's room in the queue; use portMAX_DELAY to
##                       never time out.
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_ERR_TIMEOUT       if there was no room in the queue before ticks_to_wait expired
##          - ESP_ERR_NO_MEM        if allocating DMA-capable temporary buffer failed
##          - ESP_ERR_INVALID_STATE if previous transactions are not finished
##          - ESP_OK                on success
##

proc spi_device_queue_trans*(handle: spi_device_handle_t;
                            trans_desc: ptr spi_transaction_t;
                            ticks_to_wait: TickType_t): esp_err_t {.
    importc: "spi_device_queue_trans", header: "spi_master.h".}
## *
##  @brief Get the result of a SPI transaction queued earlier by ``spi_device_queue_trans``.
##
##  This routine will wait until a transaction to the given device
##  succesfully completed. It will then return the description of the
##  completed transaction so software can inspect the result and e.g. free the memory or
##  re-use the buffers.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param trans_desc Pointer to variable able to contain a pointer to the description of the transaction
##         that is executed. The descriptor should not be modified until the descriptor is returned by
##         spi_device_get_trans_result.
##  @param ticks_to_wait Ticks to wait until there's a returned item; use portMAX_DELAY to never time
##                         out.
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_ERR_TIMEOUT       if there was no completed transaction before ticks_to_wait expired
##          - ESP_OK                on success
##

proc spi_device_get_trans_result*(handle: spi_device_handle_t;
                                 trans_desc: ptr ptr spi_transaction_t;
                                 ticks_to_wait: TickType_t): esp_err_t {.
    importc: "spi_device_get_trans_result", header: "spi_master.h".}
## *
##  @brief Send a SPI transaction, wait for it to complete, and return the result
##
##  This function is the equivalent of calling spi_device_queue_trans() followed by spi_device_get_trans_result().
##  Do not use this when there is still a transaction separately queued (started) from spi_device_queue_trans() or polling_start/transmit that hasn't been finalized.
##
##  @note This function is not thread safe when multiple tasks access the same SPI device.
##       Normally a device cannot start (queue) polling and interrupt
##       transactions simutanuously.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param trans_desc Description of transaction to execute
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_OK                on success
##

proc spi_device_transmit*(handle: spi_device_handle_t;
                         trans_desc: ptr spi_transaction_t): esp_err_t {.
    importc: "spi_device_transmit", header: "spi_master.h".}
## *
##  @brief Immediately start a polling transaction.
##
##  @note Normally a device cannot start (queue) polling and interrupt
##       transactions simutanuously. Moreover, a device cannot start a new polling
##       transaction if another polling transaction is not finished.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param trans_desc Description of transaction to execute
##  @param ticks_to_wait Ticks to wait until there's room in the queue;
##               currently only portMAX_DELAY is supported.
##
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_ERR_TIMEOUT       if the device cannot get control of the bus before ``ticks_to_wait`` expired
##          - ESP_ERR_NO_MEM        if allocating DMA-capable temporary buffer failed
##          - ESP_ERR_INVALID_STATE if previous transactions are not finished
##          - ESP_OK                on success
##

proc spi_device_polling_start*(handle: spi_device_handle_t;
                              trans_desc: ptr spi_transaction_t;
                              ticks_to_wait: TickType_t): esp_err_t {.
    importc: "spi_device_polling_start", header: "spi_master.h".}
## *
##  @brief Poll until the polling transaction ends.
##
##  This routine will not return until the transaction to the given device has
##  succesfully completed. The task is not blocked, but actively busy-spins for
##  the transaction to be completed.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param ticks_to_wait Ticks to wait until there's a returned item; use portMAX_DELAY to never time
##                         out.
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_ERR_TIMEOUT       if the transaction cannot finish before ticks_to_wait expired
##          - ESP_OK                on success
##

proc spi_device_polling_end*(handle: spi_device_handle_t; ticks_to_wait: TickType_t): esp_err_t {.
    importc: "spi_device_polling_end", header: "spi_master.h".}
## *
##  @brief Send a polling transaction, wait for it to complete, and return the result
##
##  This function is the equivalent of calling spi_device_polling_start() followed by spi_device_polling_end().
##  Do not use this when there is still a transaction that hasn't been finalized.
##
##  @note This function is not thread safe when multiple tasks access the same SPI device.
##       Normally a device cannot start (queue) polling and interrupt
##       transactions simutanuously.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param trans_desc Description of transaction to execute
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_OK                on success
##

proc spi_device_polling_transmit*(handle: spi_device_handle_t;
                                 trans_desc: ptr spi_transaction_t): esp_err_t {.
    importc: "spi_device_polling_transmit", header: "spi_master.h".}
## *
##  @brief Occupy the SPI bus for a device to do continuous transactions.
##
##  Transactions to all other devices will be put off until ``spi_device_release_bus`` is called.
##
##  @note The function will wait until all the existing transactions have been sent.
##
##  @param device The device to occupy the bus.
##  @param wait Time to wait before the the bus is occupied by the device. Currently MUST set to portMAX_DELAY.
##
##  @return
##       - ESP_ERR_INVALID_ARG : ``wait`` is not set to portMAX_DELAY.
##       - ESP_OK : Success.
##

proc spi_device_acquire_bus*(device: spi_device_handle_t; wait: TickType_t): esp_err_t {.
    importc: "spi_device_acquire_bus", header: "spi_master.h".}
## *
##  @brief Release the SPI bus occupied by the device. All other devices can start sending transactions.
##
##  @param dev The device to release the bus.
##

proc spi_device_release_bus*(dev: spi_device_handle_t) {.
    importc: "spi_device_release_bus", header: "spi_master.h".}
## *
##  @brief Calculate the working frequency that is most close to desired frequency.
##
##  @param fapb The frequency of apb clock, should be ``APB_CLK_FREQ``.
##  @param hz Desired working frequency
##  @param duty_cycle Duty cycle of the spi clock
##
##  @return Actual working frequency that most fit.
##

proc spi_get_actual_clock*(fapb: cint; hz: cint; duty_cycle: cint): cint {.
    importc: "spi_get_actual_clock", header: "spi_master.h".}
## *
##  @brief Calculate the timing settings of specified frequency and settings.
##
##  @param gpio_is_used True if using GPIO matrix, or False if iomux pins are used.
##  @param input_delay_ns Input delay from SCLK launch edge to MISO data valid.
##  @param eff_clk Effective clock frequency (in Hz) from spi_cal_clock.
##  @param dummy_o Address of dummy bits used output. Set to NULL if not needed.
##  @param cycles_remain_o Address of cycles remaining (after dummy bits are used) output.
##          - -1 If too many cycles remaining, suggest to compensate half a clock.
##          - 0 If no remaining cycles or dummy bits are not used.
##          - positive value: cycles suggest to compensate.
##
##  @note If **dummy_o* is not zero, it means dummy bits should be applied in half duplex mode, and full duplex mode may not work.
##

proc spi_get_timing*(gpio_is_used: bool; input_delay_ns: cint; eff_clk: cint;
                    dummy_o: ptr cint; cycles_remain_o: ptr cint) {.
    importc: "spi_get_timing", header: "spi_master.h".}
## *
##  @brief Get the frequency limit of current configurations.
##          SPI master working at this limit is OK, while above the limit, full duplex mode and DMA will not work,
##          and dummy bits will be aplied in the half duplex mode.
##
##  @param gpio_is_used True if using GPIO matrix, or False if native pins are used.
##  @param input_delay_ns Input delay from SCLK launch edge to MISO data valid.
##  @return Frequency limit of current configurations.
##

proc spi_get_freq_limit*(gpio_is_used: bool; input_delay_ns: cint): cint {.
    importc: "spi_get_freq_limit", header: "spi_master.h".}